[gd_scene load_steps=4 format=3 uid="uid://cv5f6n8sd18wh"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_qpwn1"]
[ext_resource type="PackedScene" uid="uid://cq6m7fegtnxga" path="res://scenes/objects/gate.tscn" id="2_87v4x"]
[ext_resource type="PackedScene" uid="uid://bjk1lhx7fq6yk" path="res://scenes/player/player.tscn" id="4_r4atl"]

[node name="level" type="Node2D"]
script = ExtResource("1_qpwn1")

[node name="gate" parent="." instance=ExtResource("2_87v4x")]

[node name="player" parent="." instance=ExtResource("4_r4atl")]
position = Vector2(608, 575)

[node name="Projectiles" type="Node2D" parent="."]

[connection signal="player_entered_gate" from="gate" to="." method="_on_gate_player_entered_gate"]
[connection signal="granade_signal" from="player" to="." method="_on_player_granade_signal"]
[connection signal="laser_signal" from="player" to="." method="_on_player_laser_signal"]
